--- a/images.html
+++ b/images.html
@@ -19,8 +19,8 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>archive</h1>
-    <p class="sub">no feed · no sorting · only finding</p>
+    <h1>The Future</h1>
+    <p class="sub">Time Traveler</p>
 
     <div id="gallery" class="gallery"></div>
 
