--- a/images.html
+++ b/images.html
@@ -19,8 +19,8 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>The Future</h1>
-    <p class="sub">Time Traveler</p>
+    <h1>Time Travel</h1>
+    <p class="sub">The Future</p>
 
     <div id="gallery" class="gallery"></div>
 
