--- a/images.html
+++ b/images.html
@@ -4,16 +4,57 @@
   <meta charset="utf-8">
   <title>archive</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body{margin:0;padding:40px 20px;background:#f4f0e6;color:#2a2a2a;font-family:Georgia,"Times New Roman",serif;}
+    body{
+      margin:0;
+      padding:40px 20px;
+      background:#f4f0e6;
+      color:#2a2a2a;
+      font-family: Georgia, "Times New Roman", serif;
+    }
     .wrap{max-width:980px;margin:0 auto;}
-    h1{text-align:center;font-weight:normal;letter-spacing:1px;margin:0 0 8px 0;}
-    .sub{text-align:center;font-size:13px;color:#7a6f5a;margin:0 0 44px 0;}
-    .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:26px;}
-    figure{margin:0;background:#fff;padding:8px;border:1px solid #cfc6b4;box-shadow:0 4px 12px rgba(0,0,0,0.08);}
-    img{width:100%;height:auto;display:block;}
-    figcaption{margin-top:8px;font-size:12px;color:#8b7f67;word-break:break-word;}
-    footer{margin-top:64px;text-align:center;font-size:12px;color:#8b7f67;}
+    h1{
+      text-align:center;
+      font-weight:normal;
+      letter-spacing:1px;
+      margin:0 0 8px 0;
+    }
+    .sub{
+      text-align:center;
+      font-size:13px;
+      color:#7a6f5a;
+      margin:0 0 44px 0;
+    }
+    .gallery{
+      display:grid;
+      grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
+      gap:26px;
+    }
+    figure{
+      margin:0;
+      background:#fff;
+      padding:8px;
+      border:1px solid #cfc6b4;
+      box-shadow:0 4px 12px rgba(0,0,0,0.08);
+    }
+    img{
+      width:100%;
+      height:auto;
+      display:block;
+    }
+    figcaption{
+      margin-top:8px;
+      font-size:12px;
+      color:#8b7f67;
+      word-break:break-word;
+    }
+    footer{
+      margin-top:64px;
+      text-align:center;
+      font-size:12px;
+      color:#8b7f67;
+    }
   </style>
 </head>
 <body>
@@ -23,63 +64,62 @@
 
     <div id="gallery" class="gallery"></div>
 
-    <footer>./images</footer>
+    <footer>root/images</footer>
   </div>
 
   <script>
     const gallery = document.getElementById("gallery");
+
+    // Set this to your highest (n). Includes img (n) where n=1..MAX_N plus the base "img"
     const MAX_N = 82;
-    const EXTS = ["jpg","jpeg","png"];
 
-    function encodePath(p){
-      // encodes each segment safely (spaces, parentheses)
-      return p.split("/").map(encodeURIComponent).join("/");
-    }
+    // Only these extensions, and it will load *all that exist* for each number
+    const EXTS = ["jpg", "jpeg", "png"];
 
-    function tryLoad(url) {
+    function tryLoad(src) {
       return new Promise(resolve => {
         const img = new Image();
         img.loading = "lazy";
         img.decoding = "async";
         img.onload = () => resolve(img);
         img.onerror = () => resolve(null);
-        img.src = url;
+        img.src = src;
       });
     }
 
-    async function add(file) {
-      const url = encodePath(`./images/${file}`);
-      const img = await tryLoad(url);
+    async function addIfExists(file) {
+      const src = `images/${encodeURIComponent(file)}`;
+      const img = await tryLoad(src);
       if (!img) return false;
 
       const fig = document.createElement("figure");
+      fig.appendChild(img);
+
       const cap = document.createElement("figcaption");
       cap.textContent = file;
-
-      fig.appendChild(img);
       fig.appendChild(cap);
+
       gallery.appendChild(fig);
       return true;
     }
 
-    function bases(n){
-      if (n === 0) return ["img"];
-      return [`img (${n})`, `img(${n})`]; // handles both spacing styles
+    async function loadIndex(n) {
+      const base = (n === 0) ? "img" : `img (${n})`;
+
+      // IMPORTANT: no early return — we want multiple extensions per same number
+      for (const ext of EXTS) {
+        await addIfExists(`${base}.${ext}`);
+      }
     }
 
     (async () => {
-      // Also prints helpful info
-      console.log("Gallery starting. Looking in ./images/");
+      // First try the base: img.jpg / img.jpeg / img.png
+      await loadIndex(0);
 
-      for (let n = 0; n <= MAX_N; n++) {
-        for (const b of bases(n)) {
-          for (const ext of EXTS) {
-            await add(`${b}.${ext}`);
-          }
-        }
+      // Then numbered: img (1).* through img (82).*
+      for (let i = 1; i <= MAX_N; i++) {
+        await loadIndex(i);
       }
-
-      console.log("Gallery finished.");
     })();
   </script>
 </body>
